--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <script src="https://kit.fontawesome.com/2e3bd962e7.js"></script>
+    <title>Repos :D</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
